# seshmux

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
crates/seshmux-app/: Cargo.toml
crates/seshmux-app/src/: attach.rs  catalog.rs  delete.rs  lib.rs  list.rs  new.rs  runtime.rs  target.rs
crates/seshmux-app/tests/: delete_real_repo.rs  new_usecase.rs  operations_usecase.rs
crates/seshmux-app/tests/support/: mod.rs
crates/seshmux-cli/: Cargo.toml
crates/seshmux-cli/src/: cli.rs  diagnostics.rs  dispatch.rs  lib.rs  main.rs  prompt.rs
crates/seshmux-cli/tests/: help_and_gating.rs
crates/seshmux-cli/tests/support/: mod.rs
crates/seshmux-core/: Cargo.toml
crates/seshmux-core/src/: command_adapter.rs  command_runner.rs  config.rs  doctor.rs  extras.rs  git.rs  lib.rs  names.rs  registry.rs  test_support.rs  time.rs  tmux.rs
crates/seshmux-tui/: Cargo.toml
crates/seshmux-tui/src/: attach_flow.rs  delete_flow.rs  keymap.rs  lib.rs  list_flow.rs  new_flow.rs  theme.rs
crates/seshmux-tui/src/new_flow/: extras.rs  keys.rs  mod.rs  picker.rs  render.rs
crates/seshmux-tui/src/ui/: binary_choice.rs  loading.rs  mod.rs  modal.rs  select_step.rs  text.rs  worktree_table.rs
crates/seshmux-ui-tree/: Cargo.toml
demo/: README.md  timing.env
demo/scripts/: build_tapes.sh  render.sh  setup.sh
demo/tapes/: 01-create-and-attach.tape  02-attach-existing.tape  03-delete-and-kill.tape
