[workspace]
members = [
    "crates/seshmux-cli",
    "crates/seshmux-core",
    "crates/seshmux-app",
    "crates/seshmux-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
clap = { version = "4.5.50", features = ["derive"] }
comfy-table = "7.2.1"
crossterm = "0.29.0"
directories = "6.0.0"
predicates = "3.1.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
thiserror = "2.0.12"
time = { version = "0.3.44", features = ["formatting"] }
toml = "1.0.3"
