[package]
name = "seshmux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "seshmux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
seshmux-app = { path = "../seshmux-app" }
seshmux-tui = { path = "../seshmux-tui" }
seshmux-core = { path = "../seshmux-core" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
